--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/javaUser
-spring.datasource.username=postgres
-spring.datasource.password=Rinku@18
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL81Dialect
+server.tomcat.accesslog.enabled=true
 
-# Remove in case of production
-logging.level.org.springframework.security=DEBUG
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.show-sql=true
+
+spring.datasource.url=jdbc:postgresql://dpg-cgkqqee4dad69r469820-a.render.com:5432/user_179a
+spring.datasource.username=rinku
+spring.datasource.password=Be4aUFGkGzI7E1WWF8jeM5XxVmFuZ9GT
+spring.datasource.driver-class-name=org.postgresql.Driver
