--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,8 @@ spring.datasource.url=jdbc:postgresql://dpg-cgkqqee4dad69r469820-a.render.com:54
 spring.datasource.username=rinku
 spring.datasource.password=Be4aUFGkGzI7E1WWF8jeM5XxVmFuZ9GT
 spring.datasource.driver-class-name=org.postgresql.Driver
+
+# spring.datasource.url=jdbc:postgresql://localhost:8088/javaUser
+# spring.datasource.username=devmachine
+# spring.datasource.password=pass123
+# spring.datasource.driver-class-name=org.postgresql.Driver
