--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,12 +4,19 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialec
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.show-sql=true
 
-spring.datasource.url=jdbc:postgresql://dpg-cgkqqee4dad69r469820-a.render.com:5432/user_179a
-spring.datasource.username=rinku
-spring.datasource.password=Be4aUFGkGzI7E1WWF8jeM5XxVmFuZ9GT
+# spring.datasource.url=jdbc:postgresql://dpg-cgkqqee4dad69r469820-a.render.com:5432/user_179a
+# spring.datasource.username=rinku
+# spring.datasource.password=Be4aUFGkGzI7E1WWF8jeM5XxVmFuZ9GT
+# spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/Userregister
+spring.datasource.username=postgres
+spring.datasource.password=Rinku@18
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-# spring.datasource.url=jdbc:postgresql://localhost:8088/javaUser
-# spring.datasource.username=devmachine
-# spring.datasource.password=pass123
-# spring.datasource.driver-class-name=org.postgresql.Driver
+# spring.mail.host=smtp.gmail.com
+# spring.mail.port=587
+# spring.mail.username=yadavsuhani0605@gmail.com
+# spring.mail.password=vzpjhlwnhntlkxsa
+# spring.mail.properties.mail.smtp.auth=true
+# spring.mail.properties.mail.smtp.starttls.enable=true
