--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,10 @@
 		<java.version>19</java.version>
 	</properties>
 	<dependencies>
+	<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -44,6 +48,10 @@
 			<artifactId>postgresql</artifactId>
 			<scope>runtime</scope>
 		</dependency>
+		    <!-- <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-security</artifactId>
+    </dependency> -->
 		<dependency>
     		<groupId>org.springframework.boot</groupId>
     		<artifactId>spring-boot-starter-jdbc</artifactId>
@@ -55,7 +63,7 @@
         <dependency>
         <groupId>org.springframework.security</groupId>
         <artifactId>spring-security-config</artifactId>
-        <version>6.0.2</version>
+        <!-- <version>6.0.2</version> -->
       </dependency>
 	  <dependency>
         <groupId>org.springframework.security</groupId>
@@ -72,6 +80,10 @@
 	<artifactId>spring-boot-starter-test</artifactId>
 	<scope>test</scope>
 	</dependency>
+	<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
 
 </dependencies>
 
